objects/Case_Origin_Mapping_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hudson&apos;s Bay</fullName>
                    <default>true</default>
                    <label>Hudson&apos;s Bay</label>
                </value>
                <value>
                    <fullName>MHF</fullName>
                </value>
                <value>
                    <fullName>Lord + Taylor</fullName>
                </value>
                <value>
                    <fullName>Saks</fullName>
                </value>
                <value>
                    <fullName>Off 5th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inbound_Email_Address__c</fullName>
        <label>Inbound Email Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Origin Mapping Settings</label>
    <pluralLabel>Case Origin Mapping Settings</pluralLabel>
</CustomObject>